service.yml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: open-webui

---

apiVersion: v1
kind: Service
metadata:
  name: ollama-service
spec:
  ports:
  - protocol: TCP
    port: 11434
    targetPort: 11434
  selector:
    app: ollama
